feat: Add commit message task to deno.json

--- a/deno.json
+++ b/deno.json
@@ -68,5 +68,9 @@
     "noImplicitThis": true,
     "noImplicitReturns": true,
     "exactOptionalPropertyTypes": true
+  },
+
+  "tasks": {
+    "commitMessage": "deno run  --allow-all ./utils/aicommit.ts"
   }
 }
